# DoctorLabs

./: README.md  doctor-labs-haptic-neural-lexicon.yaml
crates/cybernano-quiet-violence/src/: lib.rs
crates/doctor_labs_superfilter/src/: quiet_violence_detector.rs
crates/neuroguard/: Cargo.toml
crates/neuroguard/config/: evidence_config.toml
crates/neuroguard/src/: lexicon.rs  main.rs  monotone_lattice.rs  pattern_detector.rs
crates/superfilter/src/: superfilter_core.rs
cyb.ai/ai-chat/: semantic_detector.py
cyb.ai/logging/: evidence_bundle_generator.py
cyb.ai/policies/: bostrom_boot_monotone_checker.aii  control_reversal_blacklist.aii  did_binding_policy.aii  extended_capability_lattice.aii  governance_triad.aii  identity_host_blocklist.aii  monotone_capability_lattice.aii  monotone_capability_policy.aii  neurorights_policy.aii  weapon_proposal_gate.aii
cyb.ai/swarmnet/src/: lib.rs
cyb.ai/tests/: red_teaming_automation.sh
docs/: PROGRESS.md
docs/security/: threat_blacklist.md
doctor-labs-blacklist/: package.json
doctor-labs-blacklist/policies/: example_haptic_filter.yaml
doctor-labs-blacklist/src/filters/: doctorLabsBlacklist.js
doctor_labs_superfilter/: Cargo.toml  build.rs
doctor_labs_superfilter/src/: evidence_bundle.rs  haptic_lexicon.rs  harassment_detector.rs  lib.rs  rogue_config.rs  span_score.rs  wordmath.rs
doctorlabs-lexicon-core/src/: adapters.rs  audit.rs  capability_mode.rs  enforcement.rs  lexicon.rs  lib.rs  neurorights.rs  rogue_score.rs
doctorlabs-superfilter/src/: adapters.rs  lexicon.rs  nih_psa.rs
neuroguard/aln/: neurorights.aln
neuroguard/cpp/: telemetry_fuser.cpp  telemetry_fuser.h
neuroguard/lua/: eligibility_fsm.lua  guardian.lua
policies/governance/: governance_policy.aln
scripts/behavior/: behavioral_analyzer.lua
src/filters/: doctorLabsBlacklist.js  doctorLabsPowerShellGuard.js
src/lexicon/: federal_leo_neural_coercion.yml
src/telemetry/: telemetry_interface.cpp
